# ethreadout

./: CMakeLists.txt
plugins/: VDEmulator.cpp  VDEmulator.hpp  VDReceiver.cpp  VDReceiver.hpp
python/ethreadout/: app_confgen.py  app_confgen_receiver.py  app_confgen_sender.py
schema/ethreadout/: vdemulator.jsonnet  vdemulatorinfo.jsonnet  vdreceiver.jsonnet  vdreceiverinfo.jsonnet
src/: EthReadoutIssues.hpp  UDPReceiver.hpp  UDPSender.hpp
test/apps/: udp_receiver.cxx  udp_sender.cxx  udptest.cxx
